# rocket-diesel-boilerplate

./: Cargo.toml
migrations/2023-05-21-025224_create_users/: up.sql
migrations/2023-05-21-025655_create_users_and_clean/: up.sql
src/: main.rs  schema.rs
src/database/: users.rs
src/models/: user.rs
src/routes/: users.rs
