[package]
name = "rocket-diesel-boilerplate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
diesel = { version = "2.0.0", features = ["postgres", "chrono"] }
serde_json = "1.0.85"
dotenvy = "0.15"
chrono = { version = "0.4.24", feaures = ["serde"] }
[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]
